--- a/app/src/main/assets/alk_telugu.htm
+++ b/app/src/main/assets/alk_telugu.htm
@@ -1,7 +1,7 @@
- ఆల్కలీనిటి ;
+ ఆల్కలీనిటి </br> </br>
  
-యూనిట్లు: mg/L CaCO3.
+యూనిట్లు: mg/L CaCO3.</br> </br>
 
-ఆల్కలీనీటి తక్కువగా  ఉన్న  నీటిని  త్రాగడం  వలన  గ్యాస్ట్రిక్  సమస్యలు , చర్మ  వచ్చును . 
-నీటిలో  ఆల్కలీనీటి   ఎక్కువగా  ఉండడం  వలన  నీటి  యొక్క  ph  విలువ  పెరుగును . 
-నీటిలో  ఉన్న  ఆల్కలీనీటిని  న్యూట్రలైజర్స్  ఉపయోగించి  తొలగించవచ్చు .  
+ఆల్కలీనీటి తక్కువగా  ఉన్న  నీటిని  త్రాగడం  వలన  గ్యాస్ట్రిక్  సమస్యలు , చర్మ  వచ్చును . </br>
+నీటిలో  ఆల్కలీనీటి   ఎక్కువగా  ఉండడం  వలన  నీటి  యొక్క  ph  విలువ  పెరుగును . </br>
+నీటిలో  ఉన్న  ఆల్కలీనీటిని  న్యూట్రలైజర్స్  ఉపయోగించి  తొలగించవచ్చు .  </br>
