--- a/app/src/main/assets/chloride_telugu.htm
+++ b/app/src/main/assets/chloride_telugu.htm
@@ -1,8 +1,8 @@
- క్లోరైడ్ ;
+ క్లోరైడ్ </br> </br>
  
-రసాయన చిహ్నం:      Cl –
-యూనిట్లు:   mg/l Cl
+రసాయన చిహ్నం:      Cl – </br> </br>
+యూనిట్లు:   mg/l Cl </br> </br>
 
-నీటిలో  క్లోరిన్  ఎరువులు ,పరిశ్రమల  వ్యర్ధాలు  వలన  చేరును .  
-క్లోరైడ్  ఎక్కువగా  ఉన్న  నీటిని   త్రాగడం  వలన  రక్తపోటు  పెరగడం ,నీటికి  ఉప్పు  రుచి  రావడం  జరుగును .  
-నీటిలో  ఉన్న  క్లోరైడ్ ను  రివర్స్  ఆస్మాసిస్  పద్ధతి  ద్వారా  తొలగించవచ్చు .  
+నీటిలో  క్లోరిన్  ఎరువులు ,పరిశ్రమల  వ్యర్ధాలు  వలన  చేరును .   </br>
+క్లోరైడ్  ఎక్కువగా  ఉన్న  నీటిని   త్రాగడం  వలన  రక్తపోటు  పెరగడం ,నీటికి  ఉప్పు  రుచి  రావడం  జరుగును .   </br>
+నీటిలో  ఉన్న  క్లోరైడ్ ను  రివర్స్  ఆస్మాసిస్  పద్ధతి  ద్వారా  తొలగించవచ్చు .   </br>
