--- a/app/src/main/assets/fluoride_telugu.htm
+++ b/app/src/main/assets/fluoride_telugu.htm
@@ -1,8 +1,8 @@
-ఫ్లోరైడ్ ;
-రసాయన చిహ్నం:      F –
-యూనిట్లు:   mg/I F.
+ఫ్లోరైడ్ </br> </br>
+రసాయన చిహ్నం:      F – </br> </br>
+యూనిట్లు:   mg/I F. </br> </br>
 
-నీటిలో  ఫ్లోరైడ్  పరిమితి 1. 0mg /లీ  నుండి  1. 5mg /లీ  మధ్య  ఉండాలి. 
-ఫ్లోరిన్ ఎక్కువుగా  ఉన్న  నీటిని  త్రాగడం  వలన  దంతాలపై  ఉండే  ఎనామిల్  పొర  నశించును. 
-ఫ్లోరిన్  ఎక్కువుగా ఉన్న  నీటిని  త్రాగడం  వలన  ఎముకలు బలహీన  పడును . 
+నీటిలో  ఫ్లోరైడ్  పరిమితి 1. 0mg /లీ  నుండి  1. 5mg /లీ  మధ్య  ఉండాలి. </br>
+ఫ్లోరిన్ ఎక్కువుగా  ఉన్న  నీటిని  త్రాగడం  వలన  దంతాలపై  ఉండే  ఎనామిల్  పొర  నశించును. </br>
+ఫ్లోరిన్  ఎక్కువుగా ఉన్న  నీటిని  త్రాగడం  వలన  ఎముకలు బలహీన  పడును . </br>
 నీటిలో  ఎక్కువగా  ఉన్న  ఫ్లోరిన్ ను యాక్టివేటెడ్   అల్లూ మినా  ఫిల్టరేషన్ , రివర్స్  ఆస్మాసిస్   పద్ధతుల  ద్వారా తొలగించవచ్చు .  
