--- a/app/src/main/assets/hardness_telugu.htm
+++ b/app/src/main/assets/hardness_telugu.htm
@@ -1,6 +1,6 @@
-నీటి  కాఠిన్యత:
+నీటి  కాఠిన్యత</br></br>
 
-యూనిట్లు:   mg/l CaCO3.
+యూనిట్లు:   mg/l CaCO3.</br></br>
 
 నీరు  ఎక్కువ పరిణామంలో  కాల్షియమ్ , మరియు  మెగ్నీషియం లను కలిగి  ఉన్నట్లైతే  కఠిన  జలం గా  భావిస్తారు. కఠిన జలం  ఆరోగ్యానికి హాని కాదు .
  నేషనల్ రీసెర్చ్ కౌన్సిల్  వారు  కఠినత  కలిగిన  నీరు సాధారణంగా  మానవ ఆహార  అవసరములకు  కావలసిన  కాల్షియమ్ , మెగ్నీషియం  లను  అందిస్తుందని  తెలియజేస్తారు . 
