--- a/app/src/main/assets/iron_telugu.htm
+++ b/app/src/main/assets/iron_telugu.htm
@@ -1,9 +1,9 @@
- ఐరన్ ;
- 
-రసాయన చిహ్నం:      Fe.
-యూనిట్లు:   mg/l Fe.
+ ఐరన్ </br></br>
 
-రక్తంలో  ఉండే  హిమోగ్లోబిన్ లో  ఐరన్  ఉంటుంది .  
-ఐరన్ తక్కువగా  ఉండడం  వలన  రక్తంలో  హిమోగ్లోబిన్  పరిమాణం  తగ్గిపోతుంది .  
-ఐరన్  ఎక్కువుగా  తీసుకోవడం  వలన  nausea  మరియు  వాంతులు  వచ్చును . 
-ఐరన్ నీటిలో  ఎక్కువగా  ఉండడం  వలన  నీటి  రంగు  మారును .
+ రసాయన చిహ్నం:      Fe.</br></br>
+ యూనిట్లు:   mg/l Fe.</br></br>
+
+ రక్తంలో  ఉండే  హిమోగ్లోబిన్ లో  ఐరన్  ఉంటుంది .  </br>
+ ఐరన్ తక్కువగా  ఉండడం  వలన  రక్తంలో  హిమోగ్లోబిన్  పరిమాణం  తగ్గిపోతుంది .  </br>
+ ఐరన్  ఎక్కువుగా  తీసుకోవడం  వలన  nausea  మరియు  వాంతులు  వచ్చును . </br>
+ ఐరన్ నీటిలో  ఎక్కువగా  ఉండడం  వలన  నీటి  రంగు  మారును .</br>
