--- a/app/src/main/assets/tds_telugu.htm
+++ b/app/src/main/assets/tds_telugu.htm
@@ -1,11 +1,11 @@
-నీటిలో కరిగిన ఘనపదార్దాలు (TDS):
+నీటిలో కరిగిన ఘనపదార్దాలు (TDS)</br></br>
 
 నీటిలో కరిగిన  ఘనపదార్ధాలు  అనగా  నీటితో  కరిగి ఉన్న  ఖనిజాలు  లవణాలు ఆనయన్  మరియు   కటమాన్ లు   
 అధిక TDS  లు ఉండడం  వలన  నీటి  యొక్క  రుచి  మారును .  నీటిలో  కరిగి  ఉన్న  కొన్ని  ఘనపదార్ధముల  వలన  ఆరోగ్య  సమస్యలు  వచ్చును . 
 ఉదాహరణ ; నైట్రేట్స్,  బేరియం ,కాడ్మియం ,ఫ్లోరైడ్స్  నీటిలో  కరిగిఉన్న  ఘనపదార్ధాలను రివర్స్ ఆస్మాసిస్,అయాన్  ఎక్స్చేంజి  పద్ధతుల  ద్వారా  తొలగించవచ్చు 
- TDS (milligram per liters)	ఫలితము
-< 300	చాలా మంచి ఫలితము
-300-600	మంచి ఫలితము
-600-900	సాధారణ ఫలితము.
-900-1200	చెడ్డ  ఫలితము.
-> 1200	ప్రతికూలమైన ఫలితము
+ TDS (milligram per liters)	ఫలితము</br></br>
+< 300	చాలా మంచి ఫలితము</br>
+300-600	మంచి ఫలితము</br>
+600-900	సాధారణ ఫలితము.</br>
+900-1200	చెడ్డ  ఫలితము.</br>
+> 1200	ప్రతికూలమైన ఫలితము</br>
